--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,15 +2,18 @@
     background-image:linear-gradient(225deg,#a52a2ab7,#a52a2a);
     height:250px;
     border-bottom:2px solid rgba(0, 0, 0, 0.52);
+   // margin-left:0px;
+    
     .cabecera{
         img{
         width:190px;
         height:190px;
         }
-        //esto de abajo ahce referencia al texto de la cabecera
+        //esto de abajo hace referencia al texto de la cabecera
         font-size:80px;
         margin-left:0px;
         color:white;
+        /*el código de abajo es borde del texto negro*/
         -webkit-text-stroke: 2.2px black;
 
     }
@@ -24,15 +27,51 @@
             }
         }
     }
-*/
-    button{
+    */
+
+
+    
+/*hace referencia a los botnes de acceder y cerrar sesión/perfil*/
+    .log{
+        button{
         border-radius:20px;
         border:none;
         padding:10px;
         margin-right:30px;
+        }
+        input{
+            border-radius: 20px;
+            width:300px;
+            height:38px;
+            padding-left:9px;
+        }
     }
+
+    
+
+    
+        .menu{
+            margin:0px;
+            padding:2px;
+            width:100vw;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+            border-bottom:2px solid rgba(0, 0, 0, 0.52);
+            border-right:1px solid rgba(0, 0, 0, 0.144);
+            border-left:1px solid rgba(0, 0, 0, 0.144);
+            border-top:1px solid rgba(0, 0, 0, 0.144);
+            text-align:center;
+            display:inline-block;//para que se queden uno al lado del otro
+            background-color:#a52a2a;
+            color:azure;
+            font-size:17px;
+            
+            
+        }   
+    
 }
 
+/*
 .container{
     overflow:hidden;
     margin-top:-31px;
@@ -45,9 +84,9 @@
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
         border-bottom:2px solid rgba(0, 0, 0, 0.52);
-        border-right:none;
-        border-left:none;
-        border-top:none;
+        border-right:1px solid rgba(0, 0, 0, 0.144);
+        border-left:1px solid rgba(0, 0, 0, 0.144);
+        border-top:1px solid rgba(0, 0, 0, 0.144);
         text-align:center;
         display:inline-block;//para que se queden uno al lado del otro
         background-color:#a52a2a;
@@ -59,7 +98,7 @@
 }
 
 
-
+*/
 
 footer{
     background:#a52a2a;
