--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,22 +4,25 @@
         <div class="row">
             <div class="cabecera">
                 <img src="../assets/guitar2.png"  alt="logo" [routerLink]="['/']">
-                k-band
-            </div>
+                <span class="titulo">k-band</span>
 
-    
-            <div class="column ml-2">
-                <!-- Cada etiqueta hija de column será una columna-->
-                <div class="log">
-                    <input class="justify-content-center" placeholder="Buscar canción, Banda, etc"/>
-                    <div class="btn-group col-12">
+               
+                
+                    <div class="acceso btn-group">
+                        <input class="justify-content-center" placeholder="Buscar canción, Banda, etc"/>
                         <button (click)="login()" *ngIf="!loged()" class="btn-success">Acceder</button>
         
                         <button *ngIf="loged()" class="btn-secondary">Usuario</button>
                         <button (click)="signout()" *ngIf="loged()==true" class="btn-danger">Cerrar Sesión</button> 
                     </div>
                 
-                </div>
+                
+            </div>
+
+    
+            <div class="column ml-2">
+                <!-- Cada etiqueta hija de column será una columna-->
+               
 
                 <div class="row btn-group ">
                     <!--cada etiqueta hija de col será u-->
@@ -29,6 +32,8 @@
                     <button class="menu col">Tienda</button>
         
                 </div>
+
+              
             </div> 
         </div>
         
