--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,85 +2,56 @@
     background-image:linear-gradient(225deg,#a52a2ab7,#a52a2a);
     height:250px;
     border-bottom:2px solid rgba(0, 0, 0, 0.52);
-   // margin-left:0px;
-    
+   
+    .row{
     .cabecera{
         img{
-        width:190px;
-        height:190px;
+        width:230px;
+        height:220px;
         }
         //esto de abajo hace referencia al texto de la cabecera
+        .titulo{ 
         font-size:80px;
         margin-left:0px;
         color:white;
         /*el código de abajo es borde del texto negro*/
         -webkit-text-stroke: 2.2px black;
-
-    }
-    /* Intento de hacer menú hamburguesa con css
-    .log{
-        margin-right:10px;
-        @media screen and (max-width: 630px) {
-            .flex-container {
-            display:flex;
-            flex-direction: column;
-            }
         }
+
+        .acceso{
+            float:right;
+            margin-top:40px;
+            input{          
+                border-radius: 20px;
+                width:300px;
+                height:38px;
+                padding-left:9px;
+                margin-right:50px;
+
+            }
+
+            button{
+            border-radius:20px;
+            border:none;
+            padding:10px;
+            margin-right:30px;
+            
+            }
+            
+        }
+        
+      }
     }
-    */
-
-
+    
+    
     
 /*hace referencia a los botnes de acceder y cerrar sesión/perfil*/
-    .log{
-        button{
-        border-radius:20px;
-        border:none;
-        padding:10px;
-        margin-right:30px;
-        }
-        input{
-            border-radius: 20px;
-            width:300px;
-            height:38px;
-            padding-left:9px;
-        }
-    }
+        
 
     
-
-    
-        .menu{
-            margin:0px;
-            padding:2px;
-            width:100vw;
-            border-top-left-radius: 20px;
-            border-top-right-radius: 20px;
-            border-bottom:2px solid rgba(0, 0, 0, 0.52);
-            border-right:1px solid rgba(0, 0, 0, 0.144);
-            border-left:1px solid rgba(0, 0, 0, 0.144);
-            border-top:1px solid rgba(0, 0, 0, 0.144);
-            text-align:center;
-            display:inline-block;//para que se queden uno al lado del otro
-            background-color:#a52a2a;
-            color:azure;
-            font-size:17px;
-            
-            
-        }   
-    
-}
-
-/*
-.container{
-    overflow:hidden;
-    margin-top:-31px;
-    left:auto;
-    right:auto;
-    max-width:100%;
     .menu{
+        margin-left:0px;
         padding:2px;
-        width:100vw;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
         border-bottom:2px solid rgba(0, 0, 0, 0.52);
@@ -91,15 +62,16 @@
         display:inline-block;//para que se queden uno al lado del otro
         background-color:#a52a2a;
         color:azure;
-        font-size:17px;
-        
-        
-    }
+        font-size:17px;   
+        display:table-cell;    
+        width:100vw;   
+    }   
+    
 }
 
 
-*/
 
 footer{
     background:#a52a2a;
+    width:150px;
 }
