--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,10 +26,12 @@
 
                 <div class="row btn-group ">
                     <!--cada etiqueta hija de col será u-->
-                    <button (click)="nachoInvita()"  class="menu col">Estilos</button>
-                    <button class="menu col">Grupos</button>
-                    <button class="menu col">Eventos</button>
-                    <button class="menu col">Tienda</button>
+                    <button routerLink="/estilos"  class="menu col">Estilos</button>
+                    <button routerLink="/grupos" class="menu col">Grupos</button>
+                    <button routerLink="/eventos" class="menu col">Eventos</button>
+                    <button routerLink="/tablon" class="menu col">Tablon</button>
+                    <button routerLink="/tablon" class="menu col">Tablon</button>
+                    <!--<button routerLink="/salas" class="menu col">Salas</button>-->
         
                 </div>
 
