--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,5 @@ Para generar el fichero donde tipearemos el usuario ponemos lo siguiente en la t
 Crearemos otra carpeta con ficheros para guardar la lógica de autentificación
 ng generate service shared/services/auth y aquí en el contructor ponemos el private del o que quermos usar
 -->
+<cabecera></cabecera>
 <router-outlet></router-outlet>
