--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,72 +1,25 @@
-.navbar{
-    background-image:linear-gradient(225deg,#a52a2ab7,#a52a2a);
-    height:250px;
-    border-bottom:2px solid rgba(0, 0, 0, 0.52);
-   
-    .row{
-    .cabecera{
-        img{
-        width:230px;
-        height:220px;
-        }
-        //esto de abajo hace referencia al texto de la cabecera
-        .titulo{ 
-        font-size:80px;
-        margin-left:0px;
-        color:white;
-        /*el código de abajo es borde del texto negro*/
-        -webkit-text-stroke: 2.2px black;
-        }
 
-        .acceso{
-            float:right;
-            margin-top:40px;
-            input{          
-                border-radius: 20px;
-                width:300px;
-                height:38px;
-                padding-left:9px;
-                margin-right:50px;
 
-            }
 
-            button{
-            border-radius:20px;
-            border:none;
-            padding:10px;
-            margin-right:30px;
-            
-            }
-            
-        }
+.body{
+    padding-top:50px;
+    
+    .container{
+        padding-left:0px;
+    padding-right:0px;
         
-      }
+        //display:grid;
+        //grid-template-columns: repeat(3,1fr);   //3 columnas con mismo ancho
+
+        
+                .novedad{
+                    border:1px solid black;
+
+                    object-fit:cover;//la imagen no se distorsiona
+                }
+            
+        
     }
-    
-    
-    
-/*hace referencia a los botnes de acceder y cerrar sesión/perfil*/
-        
-
-    
-    .menu{
-        margin-left:0px;
-        padding:2px;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        border-bottom:2px solid rgba(0, 0, 0, 0.52);
-        border-right:1px solid rgba(0, 0, 0, 0.144);
-        border-left:1px solid rgba(0, 0, 0, 0.144);
-        border-top:1px solid rgba(0, 0, 0, 0.144);
-        text-align:center;
-        display:inline-block;//para que se queden uno al lado del otro
-        background-color:#a52a2a;
-        color:azure;
-        font-size:17px;   
-        display:table-cell;    
-        width:100vw;   
-    }   
-    
 }
 
 
