--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -3,8 +3,8 @@
     
         <div class="row">
             <div class="cabecera">
-                <img src="../assets/guitar2.png"  alt="logo" [routerLink]="['/']">
-                <span class="titulo">dMusic</span>
+                <img routerLink="/" src="../assets/guitar2.png"  alt="logo" [routerLink]="['/']">
+                <span routerLink="/" class="titulo">dMusic</span>
 
                
                 
