--- a/src/app/components/cabecera/cabecera.component.scss
+++ b/src/app/components/cabecera/cabecera.component.scss
@@ -60,15 +60,24 @@
             color:azure;
             font-size:30px; 
             align-items: center;    
+
         } 
+        button.menu:hover{
+            background-color:rgba(236, 139, 101, 0.822);
+            text-decoration: none;
+            color:yellow;
+            transition:1.2s;//controla le tiempo de la transición del clor
+            font-size:35px; 
+
+        }
+   
+   
     }
     
-    .menu:hover{
-        background-color:blue;
-
-    }
+   
     
 
     
 }
+
 
