--- a/src/app/components/cabecera/cabecera.component.scss
+++ b/src/app/components/cabecera/cabecera.component.scss
@@ -70,6 +70,14 @@
             font-size:35px; 
 
         }
+
+        .RutaEsperada {
+            background-color:rgba(236, 139, 101, 0.822);
+            text-decoration: none;
+            color:yellow;
+            //transition:1.2s;//controla le tiempo de la transición del clor
+            font-size:35px; 
+        }
    
    
     }
