--- a/src/app/components/estilos/estilos.component.html
+++ b/src/app/components/estilos/estilos.component.html
@@ -1,1 +1,8 @@
-<p>estilos works!</p>
+
+<div class="caja">
+    <div class="disco">
+        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%" aling="let">
+        <div class="titulo">Esto es muestra</div>
+    </div>
+</div>
+
