--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,64 +1,89 @@
 <div class="body" style="background-color:#c5afaf59">
     <div class="container">
-    <div class="row">
-
-        <div class="novedad">
-            <h3>Novedades</h3>
-            <p class="align-right">
-            <img  class="col-md-4 mt-1 ml-1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%" aling="let">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indus
-            try's standard dummy text ever since the 1500s, when an unknown printer took a galley
-            of type and scrambled it to make a type specimen book. It has survived not only five cent
-            uries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popula
-            rised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more r
-            ecently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-        </p>
-        </div>
-    </div>
-    
-                    
-                    <h4>Rock</h4>
-
-                    <h3>Destacado del mes</h3>
-                    <div class="row">
-                    <img  class="col-md-4 mt-1 ml-1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                    <h3>Novedades</h3>
-                    <div class="col-md-2 mt-1 ml-1 ">1
-                        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/1280px-coldplay-global-citizen-festival-hamburg-14-1525949935.jpg?crop=1.00xw:0.754xh;0,0.193xh&resize=980:*" alt="rock" width="100%">
-                    </div>
-                    <div class="col-md-2 mt-1 ml-1">2
-                        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-841024760-1525950386.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="rock" width="100%">
-                    </div>
-                    <div class="col-md-2 mt-1 ml-1 ">3
-                        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-841024760-1525950386.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="rock" width="100%">
-                    </div>
-               
+        <div class="row">
+            <!--
+            <div class="destacado ">-->
+                <h3>Destacado del mes</h3>
                 
-            </div>
+                    
+                    <!--<div class="caja">-->
+                        
+                            <div class="disco col-xs-12 col-md-12 col-lg-6 col-xxl-6">
+                                <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                                <div class="titulo">AC DC</div>
+                            </div>
+                            <div class="presentacion col-xs-12 col-md-12 col-lg-6 col-xxl-6">
+                                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+                                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+                                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+    
+                            </div>
+                        
+                        
+                  <!--  </div>-->
+                    
+            <!--    
+            </div>-->
+        </div>
 
-            <div class="row">
-                <h4>Jazz</h4>
-                <div class="col-md-4  novedad">4
+         
+        <div class="row">
+            <h3>Novedades</h3>
+
+            <h4>Rock</h4>
+            <div class="caja">
+               
+                <div class="disco">
+                    <img  class="portada col-xxl-2 col-md-4 mt-1 ml-1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                    <div class="titulo">AC DC  2</div>
+                </div>
+                  
+                <div class="disco">
+                    <img  class="portada col-xxl-2 col-md-4 mt-1 ml-1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                    <div class="titulo">AC DC3</div>
+                </div>
+
+                <div class="disco">
+                    <img  class="portada col-xxl-2 col-md-4 mt-1 ml-1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                    <div class="titulo">AC DC4</div>
+                </div>
+           
+            </div>
+        </div>    
+        
+        
+        <div class="row">
+            <h4>Jazz</h4>
+            <div class="caja">
+                <div class=" disco col-md-4  novedad">
+                    <div class="titulo">AC DC5</div>
                     <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/1280px-coldplay-global-citizen-festival-hamburg-14-1525949935.jpg?crop=1.00xw:0.754xh;0,0.193xh&resize=980:*" alt="rock" width="100%">
                 </div>
-                <div class="col-md-4  novedad">5
+                <div class=" disco col-md-4  novedad">
+                    <div class="titulo">AC DC6</div>
                     <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-841024760-1525950386.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="rock" width="100%">
                 </div>
-                <div class="col-md-4 novedad ">6
+                <div class=" disco col-md-4 novedad ">
+                    <div class="titulo">AC DC7</div>
                     <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-841024760-1525950386.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="rock" width="100%">
                 </div>
+            </div>
+                
             </div>
             <div class="row">
                 <h4>EDM</h4>
-                <div class="col-md-4  novedad">4
-                    <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/1280px-coldplay-global-citizen-festival-hamburg-14-1525949935.jpg?crop=1.00xw:0.754xh;0,0.193xh&resize=980:*" alt="rock" width="100%">
+                <div class="caja">
+                    <div class="col-md-4  col-xxl-4 novedad">4
+                        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/1280px-coldplay-global-citizen-festival-hamburg-14-1525949935.jpg?crop=1.00xw:0.754xh;0,0.193xh&resize=980:*" alt="rock">
+                    </div>
+                    <div class="col-md-4 col-xxl-4 novedad">5
+                        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-841024760-1525950386.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="rock">
+                    </div>
+                    <div class="col-md-4 col-xxl-4 novedad">6
+                        <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-841024760-1525950386.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="rock">
+                    </div>
                 </div>
-                <div class="col-md-4  novedad">5
-                    <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-841024760-1525950386.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="rock" width="100%">
-                </div>
-                <div class="col-md-4 novedad ">6
-                    <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-841024760-1525950386.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="rock" width="100%">
-                </div>
+                
             </div>
        
         
