--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,25 +6,71 @@
     
     .container{
         padding-left:0px;
-    padding-right:0px;
-        
+        padding-right:0px;
+            
         //display:grid;
         //grid-template-columns: repeat(3,1fr);   //3 columnas con mismo ancho
+        //object-fit:cover;//la imagen no se distorsiona
+        //Aquí empieza a definierse el cuerpo, las fotos del cuerpo
 
+        .caja{
+        width:100%;
+        vertical-align:top;
+        display:inline-block;
+        border:1px solid blue;
         
-                .novedad{
-                    border:1px solid black;
-
-                    object-fit:cover;//la imagen no se distorsiona
+            .disco{
+                width:100%;
+                height:auto;
+                position:relative;
+                overflow:hidden;
+               border:1px solid yellow;
+                flex:wrap;
+                float:left;
+                
+            }
+                .portada{
+                    width:100%;
+                    height:100%;
+                    border:1px solid green;
+                    
                 }
-            
+                
+                .titulo{
+                    display:block;
+                    position:absolute;
+                    bottom:0px;
+                    //z-index:10;
+                    background:rgba(0, 0, 0, 0.418);
+                    height:15%;
+                    padding:5px;
+                    padding-left:15px;
+                    color:white;
+                    width:100%;
+                    justify-content:center;
+                    font-size:20px;
+                    align-items:center;
+
+                }
+            /*
+            .presentacion{
+                display:flex;
+                text-align: justify;
+                padding:10px;
+            }*/
+        }  
         
-    }
+        
+    }   
 }
 
 
 
+
+
+
+/*
 footer{
     background:#a52a2a;
     width:150px;
-}
+}*/
