--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,3 +21,4 @@ ng generate service shared/services/auth y aquí en el contructor ponemos el pri
 -->
 <cabecera></cabecera>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
