--- a/src/app/components/estilos/estilos.component.html
+++ b/src/app/components/estilos/estilos.component.html
@@ -1,8 +1,25 @@
 
-<div class="caja">
-    <div class="disco">
-        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%" aling="let">
-        <div class="titulo">Esto es muestra</div>
+<div class="container-fluid p-4">
+    <div class="row ">
+        <div class="box col-md-6 col-xxl-4">
+            <h2>Rock</h2>
+            <img src="https://www.espectaculosbcn.com/wp-content/uploads/2019/05/mejores-grupos-de-rock-espa%C3%B1ol-1.jpg" width="50%">
+        </div>
+
+        <div class="box col-md-6 col-xxl-4">
+            <h2>Jazz</h2>
+        </div>
+
+        <div class="box col-md-6 col-xxl-4">
+            <h2>Reage</h2>
+        </div>
+
+        <div class="box col-md-6 col-xxl-4">
+            <h2>EDM</h2>
+        </div>
+
+        <div class="box col-md-6 col-xxl-4">
+            <h2>Soul</h2>
+        </div>
     </div>
 </div>
-
