--- a/src/app/components/grupos/grupos.component.html
+++ b/src/app/components/grupos/grupos.component.html
@@ -1,1 +1,27 @@
-<p>grupos works!</p>
+<div class="container">
+    <div class="row">
+        <div class="grupo">
+            <h2 >Nombre de grupo 1</h2>
+            <img src="https://www.espectaculosbcn.com/wp-content/uploads/2019/05/mejores-grupos-de-rock-espa%C3%B1ol-1.jpg" class="col-xxl-6" width="50%">
+       
+            <div class="col-xs-12 col-md-12 col-lg-6 col-xxl-6">
+                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+
+            </div>
+        </div>
+
+        <div class="grupo">
+            <h2 >Nombre de grupo 2</h2>
+            <img src="https://www.espectaculosbcn.com/wp-content/uploads/2019/05/mejores-grupos-de-rock-espa%C3%B1ol-1.jpg" class="col-xxl-6" width="50%">
+        
+            <div class="col-xs-12 col-md-12 col-lg-6 col-xxl-6">
+                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+
+            </div>
+        </div>
+    </div>
+</div>
