--- a/src/app/components/estilos/estilos.component.scss
+++ b/src/app/components/estilos/estilos.component.scss
@@ -1,32 +1,12 @@
-  .caja{
-      width:100%;
-      vertical-align:top;
-      display:inline-block;
-      width:30%;}
-    .disco{
-        width:500px;
-        height:auto;
-        position:relative;
-        overflow:hidden;
+.container{
+    background-color:rgba(160, 64, 64, 0.876);
+    h2{
+        font-size:30px;
     }
-    .portada{
-        width:100%;
-        height:100%
-    }
-    .titulo{
-        display:block;
-        position:absolute;
-        bottom:0px;
-        z-index:10;
-        background:rgba(0, 0, 0, 0.418);
-        height:15%;
-        padding:5px;
-        padding-left:15px;
-        color:white;
-        width:100%;
-        justify-content:center;
-        font-size:20px;
-        align-items:center;
+}
+.box{
+    border:1px solid black;
+    background-color:white;
+    padding:20px;
 
-    }
-
+}
