--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,33 +1,41 @@
 <div class="body" style="background-color:#c5afaf59">
     <div class="container">
-        <div class="row">
-            <!--
-            <div class="destacado ">-->
-                <h3>Destacado del mes</h3>
+        <div class="row mb-4">
+            
+            <h3>Destacado del mes</h3>
+            
+                
                 
                     
-                    <!--<div class="caja">-->
-                        
-                            <div class="disco col-xs-12 col-md-12 col-lg-6 col-xxl-6">
-                                <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
-                                <div class="titulo">AC DC</div>
-                            </div>
-                            <div class="presentacion col-xs-12 col-md-12 col-lg-6 col-xxl-6">
-                                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
-                                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
-                                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
-    
-                            </div>
-                        
-                        
-                  <!--  </div>-->
-                    
-            <!--    
-            </div>-->
-        </div>
+            <div class="disco col-xs-12 col-md-12 col-lg-6 col-xxl-6" >
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC</div>
+                    </div>
+                </div>
+                
+                
+            </div>
+            <div class="presentacion col-xs-12 col-md-12 col-lg-6 col-xxl-6">
+                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
+                El siguiente texto debería mostrarse a la derecha de la imagen, pero algo falla ya que se empieza a mostrarse detrás de esta
 
-         
-        <div class="row">
+            </div>
+                        
+                        
+               
+        </div>
+<!--
+         <div class="carousel-item">
+            <img  class="portada col-xxl-2 col-md-4 mt-1 ml-1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+            <img  class="portada col-xxl-2 col-md-4 mt-1 ml-1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+
+            <img  class="portada col-xxl-2 col-md-4 mt-1 ml-1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+
+         </div>
+        <div class="row mb-4">
             <h3>Novedades</h3>
 
             <h4>Rock</h4>
@@ -89,50 +97,219 @@
         
         
     </div>
-    <!--
-      <hr>
-    <div class="gallery-container">
-        <div class="row">
-            <div class="column">
-                <h3>Destacado del mes</h3>
-                <div class="fav">
-                    <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-477345676-1525950190.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="novedad" width="70%">
-                </div>
-
-                
-            </div>
-
-            <h3>Novedad</h3>
-            <div class="column">
-                <h4>Rock</h4>
-                <div class="rock gallery__item">
-                    <img class="gallery__img" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/gettyimages-841024760-1525950386.jpg?crop=1xw:1xh;center,top&resize=980:*" alt="rock" width="80%">
-                    <h4 class="gallery__tittle">AC DC</h4>
-                </div>
-            </div>
-
-            <div class="column">
-                <h4>Indie</h4>
-                <div class="indie">
-                    <img src="https://pixabay.com/es/illustrations/nombres-de-dominio-1772242/" alt="indie">
-                </div>
-            </div>
-
-            <div class="column">
-                <h4>EDM</h4>
-                <div class="edm">
-                    
-                </div>
-            </div>
-
-            <div class="column">
-                <h4>Jazz</h4>
-                <div class="jazz">
-                    
+    -->
+cuenta
+    <carousel [cellsToShow]="5" [loop]="true"  [autoplay]="true" [autoplayInterval]="4000" [pauseOnHover]="true" class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="caja1">
+                <div class="disco1">
+                    <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                    <div class="titulo1">AC DC1</div>
                 </div>
             </div>
         </div>
-    </div>-->
+        <div class="carousel-item active">
+            <div class="caja1">
+                <div class="disco1">
+                    <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                    <div class="titulo1">AC DC2</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="carousel-item active">
+            <div class="caja1">
+                <div class="disco1">
+                    <img  class="portada1" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                    <div class="titulo1">AC DC3</div>
+                </div>
+            </div> 
+        </div>
+
+
+        <div class="carousel-item active">
+            4<img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+
+        </div>
+        <div class="carousel-item active">
+            5<img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+
+        </div>
+
+        <div class="carousel-item active">
+            6<img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+        </div>
+
+
+        <div class="carousel-arrows">
+            <div class="carousel-arrow carousel-arrow-prev"></div>
+            <div class="carousel-arrow carousel-arrow-next"></div>
+        </div>
+    </carousel>
+    
+
+    <h3 class="mt-4">Novedades</h3>
+    <div class="row m">
+        <h4 mb-2>Rock</h4>
+        <carousel [cellsToShow]="5" [loop]="true"  [autoplay]="true" [autoplayInterval]="4000" [pauseOnHover]="true" class="border-1px-solid-yellow">
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC1</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC2</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://static.guiainfantil.com/uploads/navidad/ninos-cantan-villancico-p.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+        </carousel>
+    </div>
+    
+
+    
+    <div class="row justify-content-center">
+        <h4 mb-2>Jazz</h4>
+        <carousel [cellsToShow]="5" [loop]="true"  [autoplay]="true" [autoplayInterval]="4000" [pauseOnHover]="true" class="border-1px-solid-yellow">
+                       <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC1</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC2</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://los40es00.epimg.net/los40/imagenes/2019/02/28/musica/1551380649_095150_1551380782_noticia_normal.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-cell">
+                <div class="caja">
+                    <div class="disco">
+                        <img  class="portada" src="https://static.guiainfantil.com/uploads/navidad/ninos-cantan-villancico-p.jpg" alt="novedad" width="100%">
+                        <div class="titulo">AC DC3</div>
+                    </div>
+                </div>
+            </div>
+        </carousel>
+    </div>
 </div>
 <footer>
     
