--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,25 +8,17 @@
         padding-left:0px;
         padding-right:0px;
             
-        //display:grid;
-        //grid-template-columns: repeat(3,1fr);   //3 columnas con mismo ancho
-        //object-fit:cover;//la imagen no se distorsiona
-        //Aquí empieza a definierse el cuerpo, las fotos del cuerpo
-
         .caja{
-        width:100%;
-        vertical-align:top;
-        display:inline-block;
-        border:1px solid blue;
+        
         
             .disco{
                 width:100%;
                 height:auto;
                 position:relative;
                 overflow:hidden;
-               border:1px solid yellow;
-                flex:wrap;
-                float:left;
+                border:1px solid yellow;
+                
+            
                 
             }
                 .portada{
@@ -40,7 +32,6 @@
                     display:block;
                     position:absolute;
                     bottom:0px;
-                    //z-index:10;
                     background:rgba(0, 0, 0, 0.418);
                     height:15%;
                     padding:5px;
@@ -50,14 +41,10 @@
                     justify-content:center;
                     font-size:20px;
                     align-items:center;
+                    font-weight: bold;
 
                 }
-            /*
-            .presentacion{
-                display:flex;
-                text-align: justify;
-                padding:10px;
-            }*/
+           
         }  
         
         
@@ -65,12 +52,48 @@
 }
 
 
+.caja1{
+        
+        
+    .disco1{
+        //width:100%;
+        height:200px;
+        position:relative;
+        overflow:hidden;
+        border:1px solid yellow;
+        
+    
+        
+    }
+        .portada1{
+            width:100%;
+            height:100%;
+            border:1px solid green;
+            
+        }
+        
+        .titulo1{
+            display:block;
+            position:absolute;
+            bottom:0px;
+            background:rgba(0, 0, 0, 0.418);
+            height:15%;
+            padding:5px;
+            padding-left:15px;
+            //padding-bottom:0px;
+            color:blue;
+            width:100%;
+            justify-content:center;
+            font-size:20px;
+            align-items:center;
+            font-weight: bold;
+
+        }
+   
+}  
 
 
 
 
-/*
-footer{
-    background:#a52a2a;
-    width:150px;
-}*/
+
+
