--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -25,13 +25,13 @@
             <!--md es para el tipo de patannal del dispositivo, mb margin bottom-->
             <div class="row">
                 <!--cada con col-xxl-2,decimos cuando la pantalla sea grande cada boton ocupara 2/12, cuando sea mediana md-6, ocupara 6/12 ...-->
-                <button routerLink="/estilos" [routerLinkActive]="['RutaEsperada']"  class="menu col-xxl-2 col-md-6 col-sm-12">Estilos</button>
-                <button routerLink="/grupos" [routerLinkActive]="['RutaEsperada']" class="menu col-xxl-2 col-md-6 col-sm-12">Grupos</button>
-                <button routerLink="/eventos" [routerLinkActive]="['RutaEsperada']" class="menu col-xxl-2 col-md-6 col-sm-12">Eventos</button>
-                <button routerLink="/tablon" [routerLinkActive]="['RutaEsperada']"  class="menu col-xxl-2 col-md-6 col-sm-12">Tablon</button>
-                <button  class="menu col-xxl-2 col-md-6 col-sm-12">Salas</button>
+                <button routerLink="/estilos" [routerLinkActive]="['RutaEsperada']"  class="menu col-xxl-3 col-md-6 col-sm-12">Estilos</button>
+                <button routerLink="/grupos" [routerLinkActive]="['RutaEsperada']" class="menu col-xxl-3 col-md-6 col-sm-12">Grupos</button>
+                <button routerLink="/eventos" [routerLinkActive]="['RutaEsperada']" class="menu col-xxl-3 col-md-6 col-sm-12">Eventos</button>
+                <button routerLink="/tablon" [routerLinkActive]="['RutaEsperada']"  class="menu col-xxl-3 col-md-6 col-sm-12">Tablon</button>
+                <!--<button  class="menu col-xxl-2 col-md-6 col-sm-12">Salas</button>
                 <button  class="menu col-xxl-2 col-md-6 col-sm-12">Tienda</button>
-
+                -->
 
             </div>
               
