--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="row">
 
         <div class="col-md-4 pt-5">
-            <h2 class="h2 text-warning border-bottom pb-3 border-light logo">dMusic</h2>
+            <h2 class="titulo h2 border-bottom pb-3 border-light logo">dMusic</h2>
             <ul class="list-unstyled text-light footer-link-list">
                 <h4>Contacta con nosotros:</h4>
                 <li>
