--- a/src/app/components/tablon/tablon.component.html
+++ b/src/app/components/tablon/tablon.component.html
@@ -1,1 +1,88 @@
-<p>tablon works!</p>
+<div class="container pl-4 col-12">
+    <!-- Botton modal-->
+    <button  class="add btn btn-success  mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo"><img src="https://image.flaticon.com/icons/png/512/2052/2052655.png"></button>
+    <!--Modal-->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="mensaje modal-title" id="exampleModalLabel">Nuevo anuncio</h5>
+              <button type="button"  class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="mb-3">
+                  <label for="recipient-name"  class="mensaje col-form-label">Titulo:</label>
+                  <input type="text" class="form-control" id="recipient-name">
+                </div>
+                <div class="mb-3">-
+                  <label for="message-text"  class="mensaje col-form-label">Mensaje</label>
+                  <textarea class="form-control" id="message-text"></textarea>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              <button type="button"  class="btn btn-primary">Añadir</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <ul>
+        <li>
+          <a href="#">
+            <h2>Título #1</h2>
+            <p>Contenido #1</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h2>Título #2</h2>
+            <p>Contenido #2</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h2>Título #3</h2>
+            <p>Contenido #3</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h2>Título #4</h2>
+            <p>Contenido #4</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h2>Título #5</h2>
+            <p>Contenido #5</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h2>Título #6</h2>
+            <p>Contenido #6</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h2>Título #2</h2>
+            <p>Contenido #2</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h2>Título #7</h2>
+            <p>Contenido #7</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h2>Título #8</h2>
+            <p>Contenido #8</p>
+          </a>
+        </li>
+      </ul>
+</div>
